--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -1,8 +1,8 @@
 - content_for :content, do
   .header
-    %a.logo{href: "/"}
+    %a.logo{href: fucking_root}
     .navigator
-      %a{href: "/"}回我的主页
+      %a{href: fucking_root}回我的主页
   .post
     = yield
   = render :partial => 'shared/footer'
