--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -11,11 +11,11 @@
   %body[@blog]{class: @single_post ? 'post_single' : 'post_list'}
     #wrapper
       .commands
-        %a.back_to_home{href: root_url(subdomain: 'www')}
+        %a.back_to_home{href: fucking_root}
           回我的主页
         = follow_tag @blog
       #title
-        %a{href: root_url(:subdomain => @blog.uri)}
+        %a{href: blog_path(@blog)}
           =@blog.title
       #content
         - @posts.each do |p|
@@ -25,6 +25,6 @@
       #sidebar
         #top
           #avatar
-            %a{href: root_url(:subdomain => @blog.uri)}
+            %a{href: blog_path(@blog)}
               %img{src: @blog.icon.url_for(:large)}
     = render :partial => 'shared/analytics'
