--- a/app/views/shared/404.html.haml
+++ b/app/views/shared/404.html.haml
@@ -6,7 +6,7 @@
     .e404 { display: block; background: url('/images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
     .e404_words { width: 500px; font-size: 20px; margin: auto; }
 %body
-  %a.e404{href: root_url(:subdomain => 'www')}
+  %a.e404{href: fucking_root}
   .e404_words<
-    %a{href: root_url(:subdomain => 'www')}<
+    %a{href: fucking_root}<
       您查看的页面不存在哦！ 请返回查看其他页面
