--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -248,3 +248,63 @@
 
 .post_single .open
   display: none
+
+
+.chat
+  width: 544px
+  height: 428px
+  margin: 16px
+  padding: 12px
+  border: 1px solid #dcdcdc
+  background: #f4f4f4
+  
+  a
+    font-size: 14px
+    font-family: microsoft yahei
+
+  .c_name
+    a
+      color: #676767
+      text-decoration: underline
+
+  .c_content
+    height: 390px
+    overflow-y: auto
+    overflow-x: hidden
+    font-size: 12px
+    font-family: microsoft yahei
+    color: #676767
+    padding: 0
+    margin: 0
+
+    .box
+      margin: 0 0 12px 0
+      height: auto
+
+      div
+        margin: 0 0 5px 0
+  .c_input
+    width: 544px
+    height: 30px
+    background-color: #ffffff
+    margin-top: 10px
+
+    input
+      width: 380px
+      height: 30px
+      border: 0
+      padding: 0px
+      line-height: 30px
+      font-size: 14px
+
+  .c_submmiter
+    width: 60px
+    height: 30px
+    background-color: #009fff
+    float: right
+    line-height: 30px
+    display: block
+    color: #ffffff
+    text-align: center
+    text-decoration: none
+	
