--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -297,14 +297,14 @@
       line-height: 30px
       font-size: 14px
 
-  .c_submmiter
-    width: 60px
-    height: 30px
-    background-color: #009fff
-    float: right
-    line-height: 30px
-    display: block
-    color: #ffffff
-    text-align: center
-    text-decoration: none
-	
+    .c_submitter
+      width: 60px
+      height: 30px
+      background-color: #009fff
+      float: right
+      line-height: 30px
+      display: block
+      color: #ffffff
+      text-align: center
+      text-decoration: none
+          
