--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -1,17 +1,19 @@
 .chat
   .c_content
+    %input{ :type => "hidden", :name => "count", :value => @post.comments.count }
     - @post.comments.each do |comment|
       .box
         %div<
           %span.c_name<
             %a{ :href => "" }<
               = comment.author.name
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          %span
+          &nbsp;&nbsp;&nbsp;
+          %span.c_date<
             = comment.created_at
         %div<
           = comment.content
+          
   .c_input
     = form_tag(post_comments_path, :method => "post") do |f|
       %input{ :type => "text", :name => "content" }
-      %input.c_submitter{ :type => "submit", :value => "回复" }
+      %input.c_submitter{ :type => "submit", :value => "回复", :data => { :tgt => "reply" } }
