--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -228,7 +228,7 @@
   text-decoration: none
 
 .post
-  .remove, .open, .edit
+  .remove, .open, .edit, .reply
     @include post_button
 
   .open
@@ -246,33 +246,40 @@
     &:hover
       background-position: -60px 0
 
+  .reply
+    text-indent: 0
+    padding-left: 10px
+    background-position: -100px -20px
+    &:hover
+      background-position: -100px 0
+
 .post_single .open
   display: none
 
 
 .chat
   width: 544px
-  height: 428px
   margin: 16px
   padding: 12px
   border: 1px solid #dcdcdc
   background: #f4f4f4
   
-  a
+  *
     font-size: 14px
-    font-family: microsoft yahei
 
+  span.c_date
+    font-size: 12px
+    color: #009a93
+        
   .c_name
     a
-      color: #676767
-      text-decoration: underline
-
+      color: #009a93
+      text-decoration: none
+      
   .c_content
-    height: 390px
+    max-height: 390px
     overflow-y: auto
     overflow-x: hidden
-    font-size: 12px
-    font-family: microsoft yahei
     color: #676767
     padding: 0
     margin: 0
@@ -290,12 +297,11 @@
     margin-top: 10px
 
     input
-      width: 380px
+      width: 470px
       height: 30px
       border: 0
       padding: 0px
       line-height: 30px
-      font-size: 14px
 
     .c_submitter
       width: 60px
@@ -307,4 +313,4 @@
       color: #ffffff
       text-align: center
       text-decoration: none
-          
+      cursor: pointer
