--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -248,9 +248,12 @@
 
   .reply
     text-indent: 0
-    padding-left: 10px
+    padding-left: 18px
     background-position: -100px -20px
+    vertical-align: bottom
+    line-height: 16px
     &:hover
+      text-decoration: none
       background-position: -100px 0
 
 .post_single .open
@@ -295,9 +298,15 @@
     height: 30px
     background-color: #ffffff
     margin-top: 10px
+    border: 0
+    
+    form
+      border: 0
+      margin: 0
+      padding: 0
 
     input
-      width: 470px
+      width: 478px
       height: 30px
       border: 0
       padding: 0px
@@ -307,10 +316,9 @@
       width: 60px
       height: 30px
       background-color: #009fff
-      float: right
       line-height: 30px
-      display: block
       color: #ffffff
       text-align: center
       text-decoration: none
       cursor: pointer
+      border: 0
