--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -252,7 +252,9 @@
     background-position: -100px -20px
     vertical-align: bottom
     line-height: 16px
+    color: gainsboro
     &:hover
+      color: #676767
       text-decoration: none
       background-position: -100px 0
 
