--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -1042,14 +1042,14 @@ form.edit_page .submit_box input{
 .chat *{font-size:14px;}
 .chat span.c_date{font-size:12px;color:#009a93;}
 .chat .c_name a{color:#009a93;text-decoration:none;}
-.chat .c_content{height:390px;overflow-y:auto;overflow-x:hidden;color:#676767;padding:0;margin:0;}
+.chat .c_content{height:390px;overflow-y:auto;overflow-x:hidden;color:#1d1d1d;padding:0;margin:0;}
 .chat .c_content .box{margin:0 0 12px 0;height:auto;}
 .chat .c_content .box div{margin:0 0 5px 0;}
-.chat .c_input{width:544px; height:30px; background-color:#ffffff;margin-top:10px;}
-.chat .c_input input{width:380px; height:30px;border:0;padding:0px;line-height:30px;}
-.chat .c_submmiter{width:60px; height:30px;background-color:#009fff; float:right;line-height:30px;
-	               display:block;color:#ffffff;text-align:center;text-decoration:none;}
-	
+.chat .c_input{width:544px; height:30px;background-color:#009fff;margin-top:10px;border:1px solid #1d1d1d;overflow:hidden;}
+.chat .c_input input {width:100%;height:30px;border:0px;padding:0px;margin:0px;line-height:30px;font-size:18px;}
+.chat .c_input .txt{width:470px;background-color:white;padding-top:1px;padding-left:8px;border-right:1px solid black;float:left;}
+.chat .c_input .c_submmiter{width:60px;float:left;}
+.chat .c_input .c_submmiter input{width:65px;_line-height:38px;background-color:#009fff;color:#ffffff;text-align:center;cursor:pointer;}	
 
 /****temp and gears*****/
 .the_kt_gear .weburl{
