--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -15,5 +15,7 @@
           
   .c_input
     = form_tag( post_comments_path, :method => "post", :autocomplete => "off" ) do |f|
-      %input{ :type => "text", :name => "content", :onkeydown => "if(new Event(event).code==13){this.getParent('form').getElement('.c_submitter').click();return false;}" }
-      %input.c_submitter{ :type => "submit", :value => "回复", :data => { :tgt => "reply" } }
+      .txt
+        %input{ :type => "text", :name => "content", :onkeydown => "if(new Event(event).code==13){this.getParent('form').getElement('.c_submitter').getElement('input').click();return false;}" }
+      .c_submitter
+        %input.c_submitter{ :type => "submit", :value => "回复", :data => { :tgt => "reply" } }
