Avoid sass warnings

--- a/public/stylesheets/lib.sass
+++ b/public/stylesheets/lib.sass
@@ -1,14 +1,14 @@
-$blue = #336DFF
-$light-blue = #7eaedc
-$pink = #cadbea
-$almost-white = #f2f6f9
-$green = #68879F
-$light-gray = #8e9494
-$gray = #777
+$blue: #336DFF
+$light-blue: #7eaedc
+$pink: #cadbea
+$almost-white: #f2f6f9
+$green: #68879F
+$light-gray: #8e9494
+$gray: #777
 
-$font-main = "Hiragino Sans GB", hei, "microsoft yahei"
+$font-main: "Hiragino Sans GB", hei, "microsoft yahei"
 
-$logo-width = 270px
+$logo-width: 270px
 
 $input-font-size: 20px
 $input-height: 40px
