Style for edit/remove button

--- a/public/stylesheets/blog_show.css
+++ b/public/stylesheets/blog_show.css
@@ -28,11 +28,17 @@ a img {
   float: right;
 }
 
+.commands .remove, .commands .edit,
 .back_to_home, .btn_unfollow, .btn_follow {
   text-indent: -9999px;
-  width: 80px;
-  height: 20px;
   margin-left: 10px;
+  height: 20px;
+}
+.back_to_home, .btn_unfollow, .btn_follow {
+  width: 80px;
+}
+.commands .remove, .commands .edit {
+  width: 20px;
 }
 .back_to_home {
   background: url('/images/btn_backhome.gif');
@@ -42,6 +48,12 @@ a img {
 }
 .btn_unfollow {
   background: url('/images/btn_unfollow.gif')
+}
+.commands .remove {
+  background: url('/images/btn_remove.gif')
+}
+.commands .edit {
+  background: url('/images/btn_edit.gif')
 }
 #wrapper #title {
   margin: 30px 0;
