finish comments notices

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -28,6 +28,15 @@
         %a.real_fucking_following{href: "/followings"}
           %span.icon_config &nbsp;
       %hr
+      .my_reply
+        %a{ :href => "/buzz" }
+          %span.icon_reply<
+            &nbsp;
+          %span.text_follow<
+            - if @unread_comments_notices > 0
+              %span.new
+                = "(#{@unread_comments_notices}新)"
+            我的回复
     .my_pages.shrinked{data: {widget: "shrinked", trigger: ".selector"}}
       %a.selector{href: "/home/#{@blog.uri}"}
         = @blog.title
