--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -82,6 +82,13 @@ a.page_name
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') 0 0
 
+  .icon_reply
+    display: inline-block
+    width: 14px
+    height: 14px
+    background: url('/images/icons.gif') -160px 0px
+    overflow: hidden
+
   .icon_posts
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') -140px 0px
