--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -258,6 +258,27 @@
       text-decoration: none
       background-position: -100px 0
 
+.reply_list
+  h1
+    margin: 30px 0
+    color: #009fff
+    
+    a
+      font-size: 12px
+      text-decoration: underline
+      cursor: pointer
+
+div.new_reply
+  .content_footer
+    .right
+      a.reply
+        background: url('/images/post_btn.gif') -100px -60px no-repeat
+        color: #009fff
+        &:hover
+          background: url('/images/post_btn.gif') -100px -40px no-repeat
+          color: #027fca
+
+
 .post_single .open
   display: none
 
