--- a/app/views/users/buzz.html.haml
+++ b/app/views/users/buzz.html.haml
@@ -1,5 +1,5 @@
 - content_for :head do
-  = stylesheet_link_tag 'post_display', 'dashboard'
+  = stylesheet_link_tag 'post_display', 'dashboard', 'buzz'
 
 .header
   %a.logo{href: "/home"}
