--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -131,6 +131,13 @@ a.page_name
       margin-left: -18px
       margin-bottom: 16px
 
+    .my_reply
+      margin-bottom: 10px
+      margin-top: 10px
+
+      .new
+        color: #ff9933
+
     .create_page
       margin-bottom: 2px
       margin-top: 5px
