--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -26,6 +26,10 @@
   .toggle_private
     = f.check_box :private
     = f.label :private, "设置为私密页面"
+  - unless @blog.primary?
+    .toggle_canjoin
+      = f.check_box :canjoin
+      = f.label :canjoin, "其他人可以申请加入你的博客"
   .submit_box.edit_box
     = f.submit " "
 :javascript
