--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -19,6 +19,8 @@
             data: {widget: "del", callback: "redirect"}}
             删除
           %a.edit{href: "/posts/#{@post.id}/edit", title: "编辑"} 编辑
+        - if @blog.applied? current_user
+          %a.apply{href: blog_path(@blog)+"apply", title: "申请加入"} 申请加入
       #title
         %a{href: blog_path(@blog)}
           =@blog.title
