--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -16,7 +16,7 @@
         = follow_tag @blog
         - if @single_post && @post.editable_by?(current_user)
           %a.remove{href: "/posts/#{@post.id}", title: "删除",
-            data: {widget: "del", callback: "redirect"}}
+            data: {widget: "rest", callback: "redirect", :md => "delete"}}
             删除
           %a.edit{href: "/posts/#{@post.id}/edit", title: "编辑"} 编辑
       #title
