--- a/app/views/blogs/new.html.haml
+++ b/app/views/blogs/new.html.haml
@@ -13,7 +13,7 @@
     = f.label :uri, "自定义网址"
     = f.text_field :uri
     %span
-      = server_name
+      = "."+request.domain
   .error
     %span.suggestion
       (网址随时都可以修改)
