--- a/app/views/messages/_join_oper.html.haml
+++ b/app/views/messages/_join_oper.html.haml
@@ -4,6 +4,6 @@
   %div 已忽略
 - else
   %div
-    %a{href: "/messages/#{message.id}/done", data: {method: "put", remote: "true"}} 通过
+    %a{href: "/messages/#{message.id}/doing", data: {method: "post", remote: "true"}} 通过
   %div
-    %a{href: "/messages/#{message.id}/ignore", data: {method: "put", remote: "true"}} 忽略
+    %a{href: "/messages/#{message.id}/ignore", data: {method: "post", remote: "true"}} 忽略
