user/show custom auth

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -63,10 +63,11 @@
         %span
           %a{href: followers_blog_path(@blog)}
             ! #{@blog.followers_count}人关注
-      %div
-        %span.icon_config &nbsp;
-        %span
-          %a{href: edit_blog_path(@blog)} 自定义
+      - if @blog.customed? current_user
+        %div
+          %span.icon_config &nbsp;
+          %span
+            %a{href: edit_blog_path(@blog)} 自定义
       -#
         %div
           %span.icon_remove &nbsp;
