--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -16,11 +16,12 @@
         = follow_tag @blog
         - if @single_post && @post.editable_by?(current_user)
           %a.remove{href: "/posts/#{@post.id}", title: "删除",
-            data: {widget: "rest", callback: "redirect", :md => "delete"}}
+            data: {widget: "rest", callback: "redirect", md: "delete"}}
             删除
           %a.edit{href: "/posts/#{@post.id}/edit", title: "编辑"} 编辑
         - if @blog.applied? current_user
-          %a.apply{href: blog_path(@blog)+"apply", title: "申请加入"} 申请加入
+          %a.apply{href: blog_path(@blog)+"apply", title: "申请加入",
+            :data => { :widget => "rest", :callback => "del_self", :md => "put" }} 申请加入
       #title
         %a{href: blog_path(@blog)}
           =@blog.title
