--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -80,7 +80,19 @@ a.page_name
 
   .icon_follow
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') 0 0
+    background: url('/images/icons.gif') 0 -20px
+
+  .icon_followe2
+    @include dashboard_sidebar_button
+    background: url('/images/icons.gif') 0px 0px
+
+  .icon_followed
+    @include dashboard_sidebar_button
+    background: url('/images/icons.gif') -60px 0px
+
+  .icon_message
+    @include dashboard_sidebar_button
+    background: url('/images/icons.gif') -180px -20px
 
   .icon_reply
     display: inline-block
@@ -93,13 +105,13 @@ a.page_name
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') -140px 0px
 
-  .icon_followed
-    @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -60px 0px
-
   .icon_config
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') -80px 0px
+
+  .icon_members
+    @include dashboard_sidebar_button
+    background: url('/images/icons.gif') -180px 0px
 
   .icon_remove
     @include dashboard_sidebar_button
@@ -131,7 +143,8 @@ a.page_name
       margin-left: -18px
       margin-bottom: 16px
 
-    .my_reply
+    .my_reply,
+    .my_message
       margin-bottom: 10px
       margin-top: 10px
 
