renew submit class -> send

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -24,5 +24,5 @@
                 %option{value: b.id, selected: b == @default_target_blog}
                   = b.title
     %a.cancel{href: "/home"}
-    %div{class: params[:action] == 'new' ? 'send' : 'save'}
+    %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
       %input{ :type => "submit", :value => " " }
