--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -105,3 +105,14 @@ a.logo
   width: 24px
   height: 24px
   margin: 0 auto
+
+.flash
+  text-align: center
+  
+  .success
+    background: #FFF1A8
+    position: relative
+    display: inline-block
+    padding: 3px 6px
+    border-bottom-left-radius: 6px 6px
+    border-bottom-right-radius: 6px 6px
