--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,9 @@
 - content_for :head do
   = stylesheet_link_tag 'post_display', 'dashboard'
 
-- flash.each do |k, v|
-  %div{:class => "flash_users_#{k}"}= v
+.flash
+  - flash.each do |k, v|
+    %div{:class => "#{k}"}= v
 
 .header
   %a.logo{href: "/home"}
