--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -148,6 +148,13 @@ span.suggestion
     text-decoration: underline
 
 
+#blog_custom_forms
+  li
+    display: none
+
+  li.activated
+    display: block
+
 #blog_custom_forms .blog_info
   padding: 1.2em
     font-size: 12px
