--- a/public/stylesheets/buzz.sass
+++ b/public/stylesheets/buzz.sass
@@ -1,6 +1,4 @@
 .reply_list
-  width: 700px
-
   h1
     margin: 30px 0
     color: #009fff
@@ -9,6 +7,9 @@
       font-size: 12px
       text-decoration: underline
       cursor: pointer
+
+  .page_control
+    margin-right: 62px
 
 div.new_reply
   .content_footer
